add /upstreams resources
